--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,11 @@ requires-python = ">=3.12"
 dependencies = [
     "eel>=0.18.2",
     "kenlm>=0.3.0",
-    "ruff>=0.12.7",
     "sudachidict-core>=20250515",
     "sudachipy>=0.6.10",
+]
+
+[project.optional-dependencies]
+dev = [
+    "ruff>=0.12.7",
 ]
